_generated-doc/2.7/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-database.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-database_configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-database_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.database.charset]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.database.charset[quarkus.hibernate-orm.database.charset]`

[.description]
--
The charset of the database. 
 Used for DDL generation and also for the SQL import scripts.
--|link:https://docs.oracle.com/javase/8/docs/api/java/nio/charset/Charset.html[Charset]
 
|`UTF-8`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.database.globally-quoted-identifiers]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.database.globally-quoted-identifiers[quarkus.hibernate-orm.database.globally-quoted-identifiers]`

[.description]
--
Whether Hibernate should quote all identifiers.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.-persistence-unit-name-.database.charset]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.-persistence-unit-name-.database.charset[quarkus.hibernate-orm."persistence-unit-name".database.charset]`

[.description]
--
The charset of the database. 
 Used for DDL generation and also for the SQL import scripts.
--|link:https://docs.oracle.com/javase/8/docs/api/java/nio/charset/Charset.html[Charset]
 
|`UTF-8`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.-persistence-unit-name-.database.globally-quoted-identifiers]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.-persistence-unit-name-.database.globally-quoted-identifiers[quarkus.hibernate-orm."persistence-unit-name".database.globally-quoted-identifiers]`

[.description]
--
Whether Hibernate should quote all identifiers.
--|boolean 
|`false`

|===